Archive2/08/65359f00a3ae9a/output
main.cpp:15:37: error: 'T' was not declared in this scope
 class Ref<int> : public RefImpl<Ref<T>> {
                                     ^
main.cpp:15:37: error: template argument 1 is invalid
main.cpp:15:38: error: template argument 1 is invalid
 class Ref<int> : public RefImpl<Ref<T>> {
                                      ^
main.cpp: In member function 'Ref<int>::operator std::string() const':
main.cpp:18:20: error: 'handle' was not declared in this scope
             return handle;
                    ^
